<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp">

        <!--Login-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/login_login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:fontFamily="@font/assistant_bold"/>

            <EditText
                android:id="@+id/user_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:hint="@string/login_username_email"
                android:inputType="text"
                android:paddingVertical="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteTransparent" />

            <TextView
                android:id="@+id/user_email_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/error_field_required"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:paddingVertical="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteTransparent" />

            <TextView
                android:id="@+id/password_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_white_background"
                android:text="@string/login_login"
                android:textAllCaps="true"
                android:textColor="@color/darkblue"
                android:fontFamily="@font/assistant_bold"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/forgot_password_link"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:text="@string/login_not_registered"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:text="@string/login_register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/assistant_bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
